--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body> <header>
+<body>  <header>I
+        <header class="cabecalho"> <!--começo do cabeçalho-->
+        <img class="cabecalho-imagem" src="./img/logo-escola.png" alt="logo da escola"> <h1 class="cabecalho-titulo">TRILHA DE PROGRAMAÇÃO</h1>
+        <ul class="cabecalho-lista-item"> <!--começo de lista -->
+        <li class="cabecalho-lista-item">ESCOLA</li>
+        <li class="cabecalho-lista-item">ESTUDANTE</li> </ul> <!--fim de lista-->
+        </header> <!--fim do cabeçalho-->
+        <section class="escola"> <!--começo da seção escola-->
+        <div class="escola-div-conteudo">
+        <h2 class="escola-titulo">Colégio Cívico Militar Professor Francisco Villanueva</h2> <p class="escola-texto">Ensino Fundamental e Ensino Médio</p>
+        </div>
+        <img class="imagem-escola" src="./img/escola.jpg" </section> <!
    <h1>curious shout</h1>
 </header>
 
 </body>
-</html>
+<li class=
