--- a/index.html
+++ b/index.html
@@ -7,20 +7,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>  <header>I
-        <header class="cabecalho"> <!--começo do cabeçalho-->
-        <img class="cabecalho-imagem" src="./img/logo-escola.png" alt="logo da escola"> <h1 class="cabecalho-titulo">TRILHA DE PROGRAMAÇÃO</h1>
-        <ul class="cabecalho-lista-item"> <!--começo de lista -->
-        <li class="cabecalho-lista-item">ESCOLA</li>
-        <li class="cabecalho-lista-item">ESTUDANTE</li> </ul> <!--fim de lista-->
-        </header> <!--fim do cabeçalho-->
-        <section class="escola"> <!--começo da seção escola-->
-        <div class="escola-div-conteudo">
-        <h2 class="escola-titulo">Colégio Cívico Militar Professor Francisco Villanueva</h2> <p class="escola-texto">Ensino Fundamental e Ensino Médio</p>
-        </div>
-        <img class="imagem-escola" src="./img/escola.jpg" </section> <!
-   <h1>curious shout</h1>
-</header>
+
+<body>  
+        <header class="cabecalho">
+            <img class src="gato.jpg" alt="">
+            <h1>curius shout</h1>
+            <ul class></ul>
+            <li class></li>
+            <li class></li>
+        </ul>
+</header> 
+
+<section class 
+<div>....
+<h2 class="...."
+
+<p class="...."
+<br>
+
+<p class="...."
+</div>
+
+<img class="...." src =rodape.png alt="explicacao da imagem">
+<selection class="...."
 
 </body>
-<li class=
+</html>
